
  ChangeLog for the eggleton-tools repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
   
   139: AstroFloyd, 23/08/2010
     - plotmdl: 
       - variables 220-223: a,P,E,J orb for r(m)=Rrl
       - variables 224-227: a,P,E,J orb for alpha-CE
       - allow plot styles: lines, dots or both
     - plotplt: make plot styles compatible with plotmdl
     
   138: AstroFloyd, 23/08/2010
     - plotmdl: compute secondary variables in new routine compute_mdl_variables()
   
   137: AstroFloyd, 23/08/2010
     - plotmdl: make array dat() of type double
     
   136: AstroFloyd, 22/08/2010
     - Consistently use ev for the code name and evTools for the package name
   
   135: AstroFloyd, 21/08/2010
     - created read_first_mdls from code in print_mdl_details
     - call it from there and from plotmdl
     
   134: AstroFloyd, 21/08/2010
     - move mdl functions from listmdl to mdl_functions
   
   133: AstroFloyd, 21/08/2010
     - Use the Fortran 2003 standard
    
   128-132: AstroFloyd, 21/08/2010
     - combine code from plot and tools in ../src/
   
   125-127: AstroFloyd, 21/08/2010
     - create mdl_functions; move code from plotmdl to mdl_functions and plotfunctions
    
   124: AstroFloyd, 21/08/2010 
     - plotmdl: 
       - create post-CE comparison plot; fixed some comparison-plot issues
       - list comparison plots in menu, use nrs 300+
       - added variable names to output file name
     
   123: AstroFloyd, 20/08/2010
     - plotmdl: 
       - added var 220: post-CE period, based on r(m)=R_rl (M2=M1)
       - added var 221: post-CE period, based on alpha-CE  (M2=M1)
       
   122: AstroFloyd, 20/08/2010
     - plotmdl: 
       - moved vars 216-218 to 217-219
       - added var 216: dM, fixed vars 217-218 (Ebind)
       
   121: AstroFloyd, 20/08/2010
     - plotplt:
       - Redefined var 130: J_spin -> w_spin
       - Added vars 142-143: Mbin, a_orb